--- a/FireResistance.Web/Views/Archive/Index.cshtml
+++ b/FireResistance.Web/Views/Archive/Index.cshtml
@@ -42,7 +42,9 @@
                             </td>
                             <td width="30%">@obj.SaveDate</td>
                             <td class="text-center">
-                                <a asp-controller="Archive" asp-action="DeleteDataOfColumn" asp-route-Id="@obj.Id" class="btn btn-del">Удалить</a>
+                                <div class="w-75 btn-group" role="group">
+                                    <a asp-controller="Archive" asp-action="DeleteDataOfSlab" asp-route-Id="@obj.Id" class="btn btn-del">Удалить</a>
+                                </div>
                             </td>
                         </tr>
                     }
