--- a/src/FireResistance.Web/Views/Archive/Index.cshtml
+++ b/src/FireResistance.Web/Views/Archive/Index.cshtml
@@ -43,7 +43,7 @@
                             <td width="30%">@obj.SaveDate</td>
                             <td class="text-center">
                                 <div class="w-75 btn-group" role="group">
-                                    <a asp-controller="Archive" asp-action="DeleteDataOfSlab" asp-route-Id="@obj.Id" class="btn btn-del">Удалить</a>
+                                    <a asp-controller="Archive" asp-action="DeleteDataOfColumn" asp-route-Id="@obj.Id" class="btn btn-del">Удалить</a>
                                 </div>
                             </td>
                         </tr>
